# llm-grants-council-claude1

./: CLAUDE.md  pyproject.toml
backend/: agents.py  config.py  council.py  grants_council.py  learning.py  main.py  models.py  parser.py  storage.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: Layout.css  Layout.jsx
frontend/src/pages/: AgentsOverview.css  AgentsOverview.jsx  ApplicationDetail.css  ApplicationDetail.jsx  ApplicationsList.css  ApplicationsList.jsx  ObservationsList.css  ObservationsList.jsx  SubmitApplication.css  SubmitApplication.jsx  TeamsList.css  TeamsList.jsx
